Bug Fix
Fixed a bug where importing a playlist messed up the edit playlist UI

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -638,6 +638,16 @@
   height: 25px;
 }
 
+#url-selection-logout-button{
+  position: absolute;
+  border: 1px solid lightgray;
+  top: -5%;
+  right: -5%;
+  width: 65px;
+  height: 25px;
+  text-align: center;
+}
+
 #url-selection-error{
   position: absolute;
   top: 50px;
